--- a/task2/index.html
+++ b/task2/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="container1">
       <div class="btns-wrapper">
-        <button class="btn b1">btn1</button>
-        <button class="btn b2">btn2</button>
-        <button class="btn b3">btn3</button>
+        <button class="btn b1">Add Article</button>
+        <button class="btn b2">Increment Timer</button>
+        <button class="btn b3">Start Timer</button>
       </div>
     </div>
 
